@@ -20,10 +20,6 @@ h6 {
 h1 {
   font-size: 1.5em;
   font-weight: 700;
-
-  span {
-    font-weight: 300;
-  }
 }
 
 h2 {
